# exosomians

./: README.md  pyproject.toml  setup.py
exoNet/: __init__.py  plotting.py  utils.py
exoNet/generator/: __init__.py  _sequence.py
exoNet/models/: _DeepBind.py  _ExoCNN.py  _ExoCNNLSTM.py  _ExoFCN.py  _ExoFCNN.py  _ExoLSTM.py  _ExoNet.py  __init__.py  _activations.py  _layers.py  _losses.py  _network.py
exoNet/postprocessing/: interpretability.py  pfm.py
exoNet/preprocessing/: __init__.py  _normalization.py
exopy/: __init__.py  utils.py
exopy/generator/: _erikson_dinucl_shuffle.py  _sequence.py
exopy/models/: __init__.py  _base.py  _base_modules.py  _constants.py  _data.py  _deepbind.py  _exo_cnn.py  _exo_fcn.py  _exo_gru.py  _exo_lstm.py  _model.py  _module.py  _utils.py
exopy/postprocessing/: __init__.py  interpretability.py
exopy/preprocessing/: __init__.py  _seq_preprocessing.py  kmer.py  ngram.py
notebooks/: TSVMutationMapGenerator.ipynb
notebooks/data_preparation/: Final_DataPreparation.ipynb
notebooks/sample_runs/: DNA2Vec.ipynb  DeepBind-final.ipynb  ExoCNN-final.ipynb
notebooks/visualization/: ExoCNN_LatentUMAP.ipynb
scripts/: tune.py  tune_rnn.py
scripts/ENCODE/: encodeBigWigAnalysis.R
scripts/finalizing-results/: r-merge-results.R  r-prioritize-final-seqs.R
scripts/motif-findings/: extractMotifs.sh  r-meme-preprocessing.R  r-probabilites2fasta.R
scripts/preprocess/: main-forgi.sh  main-homer.sh  main-labeling.sh  main.sh  (+7 more)
test-scripts/: interpret_deepbind.py  plot_mutation_map.py  predict.py  random_sequence_generator.py
(+14 files in other folders)
