[tool.poetry]
name = "exosomians"
packages = [
    { include = "exopy" },
]
version = "0.1.0"
description = "ExoPy python package"
authors = [
    "Ali Saberi <saberiato@gmail.com>",
    "Amirhossein Zarezadeh <amirhossein.zarezadeh@gmail.com>",
    "Delaram Pouyabahar <d.pouyabahar@gmail.com>",
    "Mohsen Naghipourfar <mohsen.naghipourfar@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.4"
pytorch-lightning = "1.5.4"
scanpy = "^1.9.3"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
